# src/projects/projects.controller.ts
@@ -14,6 +14,7 @@ import { ProjectEntity } from './entities/project.entity';
 import { GetProjectFilterDto } from './dto/filter-project-dto';
 import { RoleEnum } from 'src/common/role.enum';
 import { Roles } from 'src/auth/decorator/role.decorator';
+import { ManageTasksDto } from './dto/manage-task.dto';
 
 @Controller('projects')
 export class ProjectsController {
@@ -38,11 +39,32 @@ export class ProjectsController {
   }
 
   @Roles(RoleEnum.ADMIN)
-  @Patch(':id')
-  update(
-    @Param('id') id: string,
-    @Body() updateProjectDto: UpdateProjectDto,
-  ): Promise<ProjectEntity> {
-    return this.projectsService.update(id, updateProjectDto);
+  @Patch()
+  update(@Body() updateProjectDto: UpdateProjectDto): Promise<ProjectEntity> {
+    return this.projectsService.update(updateProjectDto);
+  }
+
+  // @Roles(RoleEnum.ADMIN)
+  // @Post('add-user-to-project')
+  // addUserToProject(@Body() manageTasksDto: ManageTasksDto): Promise<any> {
+  //   return this.projectsService.addUserToProject(manageTasksDto);
+  // }
+
+  // @Roles(RoleEnum.ADMIN)
+  // @Post('remove-user-from-project')
+  // removeUserFromProject(@Body() manageTasksDto: ManageTasksDto): Promise<any> {
+  //   return this.projectsService.removeUserFromProject(manageTasksDto);
+  // }
+
+  @Roles(RoleEnum.ADMIN)
+  @Post('add-task')
+  addTaskToProject(@Body() manageTasksDto: ManageTasksDto): Promise<any> {
+    return this.projectsService.addTaskToProject(manageTasksDto);
+  }
+
+  @Roles(RoleEnum.ADMIN)
+  @Post('remove-task')
+  removeTaskFromProject(@Body() manageTasksDto: ManageTasksDto): Promise<any> {
+    return this.projectsService.removeTaskFromProject(manageTasksDto);
   }
 }
