# src/users/users.controller.ts
@@ -12,11 +12,11 @@ import {
   Req,
   UseInterceptors,
   BadRequestException,
+  Res,
 } from '@nestjs/common';
 import { UsersService } from './users.service';
 import { CreateUserDto } from './dto/create-user.dto';
 import { UpdateUserDto } from './dto/update-user.dto';
-import { IsActive } from 'src/common/is-active.enum';
 import { UserEntity } from './entities/user.entity';
 import { Roles } from 'src/auth/decorator/role.decorator';
 import { RoleEnum } from 'src/common/role.enum';
@@ -24,6 +24,8 @@ import { FileInterceptor } from '@nestjs/platform-express';
 import { storageConfig } from 'helpers/config';
 import { extname } from 'path';
 import { FilterUserDto } from './dto/filter-user.dto';
+import { Response } from 'express';
+import { PublicAPI } from 'src/auth/decorator/public.decorator';
 
 @Controller('users')
 export class UsersController {
@@ -48,18 +50,15 @@ export class UsersController {
   }
 
   @Roles(RoleEnum.ADMIN)
-  @Patch(':id')
-  update(
-    @Param('id') id: string,
-    @Body() updateUserDto: UpdateUserDto,
-  ): Promise<UserEntity> {
-    return this.usersService.update(id, updateUserDto);
+  @Patch()
+  update(@Body() updateUserDto: UpdateUserDto): Promise<UserEntity> {
+    return this.usersService.update(updateUserDto);
   }
 
   @Roles(RoleEnum.ADMIN)
   @Delete(':id')
   remove(@Param('id') id: string): Promise<UserEntity> {
-    return this.usersService.remove(id);
+    return this.usersService.archive(id);
   }
 
   @Roles(RoleEnum.ADMIN, RoleEnum.USER, RoleEnum.PM)
@@ -98,5 +97,43 @@ export class UsersController {
       req.user_data.id,
       file.destination + '/' + file.filename,
     );
+  }
+
+  @PublicAPI()
+  // @Roles(RoleEnum.ADMIN)
+  @Post('import-users-from-file')
+  @UseInterceptors(
+    FileInterceptor('file-excel', {
+      storage: storageConfig('excel'),
+      fileFilter: (req, file, cb) => {
+        const ext = extname(file.originalname);
+        const allowedExtArr = ['.xlsx', '.csv'];
+        if (!allowedExtArr.includes(ext)) {
+          req.fileValidationError = `Wrong extension type. Accepted file ext are: ${allowedExtArr.toString()}`;
+          cb(null, false);
+        } else {
+          cb(null, true);
+        }
+      },
+    }),
+  )
+  importUsersFromFile(
+    @Req() req: any,
+    @UploadedFile() file: Express.Multer.File,
+  ) {
+    if (req.fileValidationError) {
+      throw new BadRequestException(req.fileValidationError);
+    }
+    if (!file) {
+      throw new BadRequestException('No file uploaded');
+    }
+    return this.usersService.importUsersFromFile(file);
+  }
+
+  // @Roles(RoleEnum.ADMIN)
+  @PublicAPI()
+  @Get('export-users-to-file')
+  exportUsersToFile(@Res() res: Response) {
+    return this.usersService.exportUsersToFile(res);
   }
 }
